...
                title="Deploy"
                description="Vercel and Expo EAS configured for you to ship as fast as possible."
                after="05"
              />

              <Row
                title="Native"
                description="Tamagui native components like Sheet and Toast pre-configured, saving you setup and build."
                after="03"
              />

              <Row
                title="Form"
...
