appId: com.tamagui.kitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Tabs'
- tapOn: 'Tabs'
- tapOn: 'Profile'
- assertVisible:
    text: 'Profile'
    index: 1 # tab 1 content
- assertNotVisible:
    text: 'Connections'
    index: 1 # tab 2 content
- tapOn: 'Connections'
- assertVisible:
    text: 'Connections'
    index: 1 # tab 2 content
- assertNotVisible:
    text: 'Profile'
    index: 1 # tab 1 content
- tapOn: 'Home'
