appId: host.exp.Exponent
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Tabs'
    centerElement: true
- tapOn: 'Tabs'
- assertVisible: 'Profile'
# Test: tabs are clickable
- tapOn: 'Notifications'
- tapOn: 'Profile'
