appId: com.tamagui.tamaguikitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Tabs'
- tapOn: 'Tabs'
- assertVisible: 'Profile'
# Test: tabs are clickable
- tapOn: 'Notifications'
- tapOn: 'Profile'
